<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_pick_photo"
          android:icon="@drawable/ic_action_camera"
          android:title="@string/action_cam"
          android:showAsAction="always" />
    
      <item android:id="@+id/action_pick_color"
          android:icon="@drawable/ic_action_view_as_grid"
          android:title="@string/action_pick_color"
          android:showAsAction="always" />
       <item android:id="@+id/action_save"
          android:icon="@drawable/ic_action_accept"
          android:title="@string/action_save"
          android:showAsAction="always" />
       <item
        android:id="@+id/action_new_note"
         android:showAsAction="never"
        android:title="@string/action_new_note"/>
   
</menu>